--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
 
     <properties>
         <camel.version>2.8.1</camel.version>
+        <spring.version>3.0.5.RELEASE</spring.version>
     </properties>
 
     <dependencies>
@@ -68,6 +69,34 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.0.1</version>
         </dependency>
+
+        <!-- Use constretto for getting in stage-aware properties -->
+        <dependency>
+            <groupId>org.constretto</groupId>
+            <artifactId>constretto-api</artifactId>
+            <version>1.1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.constretto</groupId>
+            <artifactId>constretto-core</artifactId>
+            <version>1.1.2</version>
+        </dependency>
+
+        <!-- Constretto uses spring core, but in constretto 2.0.x we can throw it out again-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+            
+
+        <!-- Google guava for immutable collections and utils -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>r09</version>
+        </dependency>
+
 
         <!-- logging -->
         <dependency>
