--- a/src/main/resources/camelbot.properties
+++ b/src/main/resources/camelbot.properties
@@ -1,3 +1,5 @@
+flurfunkUrl=http://server:port/flurfunk/message
+
 imapUserName=camelbot@viaboxx.de
 imapPassword=camelbot_is_that_shizz
 imapFolder=camelbot
