--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>de.viaboxx.flurfunk.bots.camel</groupId>
-    <artifactId>camelbot</artifactId>
+    <artifactId>flurfunk-camelbot</artifactId>
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
 
