--- a/src/main/resources/camelbot.properties
+++ b/src/main/resources/camelbot.properties
@@ -1,4 +1,5 @@
 flurfunkUrl=http://server:port/flurfunk/message
+flurfunkUrlSecurity=?authMethod=Basic&authUsername=XXX&authPassword=YYYY
 
 imapUserName=camelbot@viaboxx.de
 imapPassword=camelbot_is_that_shizz
