Dummy password for flurfunk mail account

--- a/src/main/resources/camelbot.properties
+++ b/src/main/resources/camelbot.properties
@@ -1,8 +1,8 @@
 flurfunkUrl=http://server:port/flurfunk/message
 flurfunkUrlSecurity=?authMethod=Basic&authUsername=XXX&authPassword=YYYY
 
-imapUserName=camelbot@viaboxx.de
-imapPassword=camelbot_is_that_shizz
+imapUserName=username@mailserver
+imapPassword=password
 imapFolder=camelbot
 imapPollingFrequency=10000
 
