--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,11 @@
     <artifactId>flurfunk-camelbot</artifactId>
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
+    <parent>
+        <groupId>de.viaboxx.parents</groupId>
+        <artifactId>viaboxx-parent</artifactId>
+        <version>1</version>
+    </parent>
 
     <name>FlurFunk CamelBot</name>
     <url>http://flurfunk.viaboxxsystems.de</url>
@@ -88,7 +93,7 @@
             <artifactId>spring-core</artifactId>
             <version>${spring.version}</version>
         </dependency>
-            
+
 
         <!-- Google guava for immutable collections and utils -->
         <dependency>
@@ -124,12 +129,67 @@
                 </configuration>
             </plugin>
 
-            <!-- allows the route to be ran via 'mvn camel:run' -->
+            <!-- allows the route to be run via 'mvn camel:run' -->
             <plugin>
                 <groupId>org.apache.camel</groupId>
                 <artifactId>camel-maven-plugin</artifactId>
                 <version>${camel.version}</version>
             </plugin>
+
+            <!-- Allows us to build a deployable assembly with 'mvn package appassembler:assemble'-->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>appassembler-maven-plugin</artifactId>
+                <version>1.1.1</version>
+                <configuration>
+                    <programs>
+                        <program>
+                            <mainClass>de.viaboxx.flurfunk.bots.camel.CamelBot</mainClass>
+                            <name>camelbot</name>
+                        </program>
+                    </programs>
+
+                    <!-- Set the target configuration directory to be used in the bin scripts -->
+                    <configurationDirectory>conf</configurationDirectory>
+                    <!-- Copy the contents from "/src/main/config" to the target
+                         configuration directory in the assembled application -->
+                    <copyConfigurationDirectory>true</copyConfigurationDirectory>
+                    <!-- Include the target configuration directory in the beginning of
+                         the classpath declaration in the bin scripts -->
+                    <includeConfigurationDirectoryInClasspath>true</includeConfigurationDirectoryInClasspath>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>appassembler</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>assemble</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>2.2.1</version>
+                <configuration>
+                    <descriptors>
+                        <descriptor>src/main/assembly/src.xml</descriptor>
+                    </descriptors>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <!-- this is used for inheritance merges -->
+                        <phase>package</phase>
+                        <!-- bind to the packaging phase -->
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
         </plugins>
     </build>
 </project>
