--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>de.viaboxx.flurfunk.bots.camel</groupId>
+    <groupId>de.viaboxx.flurfunk</groupId>
     <artifactId>flurfunk-camelbot</artifactId>
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
