Send flurfunk messages to jabber instead
This is just the beginning of the experiment. Next step is to multicast
the messages both to flurfunk AND to jabber in parallel. This requires
us to transform the payloads into two different target formats (namely
XML for flurfunk and pure text for Jabber).

--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,12 @@
         </dependency>
         <dependency>
             <groupId>org.apache.camel</groupId>
+            <artifactId>camel-xmpp</artifactId>
+            <version>${camel.version}</version>
+            <!-- use the same version as your Camel core version -->
+        </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
             <artifactId>camel-http</artifactId>
             <version>${camel.version}</version>
         </dependency>
