--- a/src/main/config/camelbot.properties
+++ b/src/main/config/camelbot.properties
@@ -9,3 +9,21 @@ imapPollingFrequency=10000
 ircServer=irc.irccloud.com
 ircChannel=#flurfunk
 ircMessagePrefix=camelbot:
+
+#### Jabber/hipchat/xmpp info
+#Username
+jabberUsername=flurfunk
+#Password
+jabberPassword=password
+#Jabber ID
+jabberID=flurfunk@server.com
+#Room nickname
+jabberNickName=Flurfunk Camelbot
+#Connect host
+jabberHost=jabber.server.com
+#Connect port	5222 (TLS) or 5223 (Legacy SSL)
+jabberPort=5222
+#Conference (MUC) domain
+jabberDomain=domain.server.com
+#XMPP/Jabber room name
+jabberRoom=flurfunk-room
