Send hipchat messages using our own jhipchat fork
See jHipChat fork:f3a039e0af1ece33687405bcc

--- a/src/main/config/camelbot.properties
+++ b/src/main/config/camelbot.properties
@@ -9,3 +9,8 @@ imapPollingFrequency=10000
 ircServer=irc.irccloud.com
 ircChannel=#flurfunk
 ircMessagePrefix=camelbot:
+
+
+hipchatAuthToken=xxxxxxxxxxxxxxxxxxxxxxxxxx
+hipchatRoomId=Flurfunk
+hipchatBotName=Camelbot
