Upgrade guava so we can work some streams later

--- a/pom.xml
+++ b/pom.xml
@@ -42,12 +42,6 @@
             <artifactId>camel-mail</artifactId>
             <version>${camel.version}</version>
         </dependency>
-        <!-- Use Hipchat API lib-->
-        <dependency>
-            <groupId>com.github.hipchat</groupId>
-            <artifactId>jHipchat</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
 
         <!-- Pull in commons-lang to get a quick conversion to html escaped symbols -->
         <dependency>
@@ -73,7 +67,7 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>r09</version>
+            <version>14.0.1</version>
         </dependency>
 
 
