Fix substring bug for short mails
The latest Guava has a nice Ascii method for truncating strings.

Also use google-http-client for sending hipchat requests.

--- a/pom.xml
+++ b/pom.xml
@@ -67,9 +67,14 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>14.0.1</version>
+            <version>18.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.http-client</groupId>
+            <artifactId>google-http-client</artifactId>
+            <version>1.20.0</version>
+        </dependency>
 
         <!-- logging -->
         <dependency>
